# Environmentship

./: Environmentship.sln  README.md
Camera detection/: CMakeLists.txt  Camera detection.vcxproj  Camera detection.vcxproj.filters  main.cpp  network.cpp  network.h  stopwatch.cpp  stopwatch.h  video.cpp  video.h  yolov5s-onnx.names
Client/: CMakeLists.txt  Client.vcxproj  main.cpp  network.cpp  stopwatch.h
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  main.cpp  video.cpp
data/name/: chess.names
results/: results.csv
