cmake_minimum_required(VERSION 2.8)
project(Communication)
find_package(OpenCV REQUIRED)
find_package(WiringPi REQUIRED)
find_package(Threads REQUIRED) 
include_directories(${OpenCV_INCLUDE_DIRS} ${WIRINGPI_INCLUDE_DIRS})
add_executable(Communication main.cpp)
target_link_libraries(Communication ${OpenCV_LIBS})
target_link_libraries(Communication ${WIRINGPI_LIBRARIES}) 
target_link_libraries(Communication ${CMAKE_THREAD_LIBS_INIT}) 