cmake_minimum_required(VERSION 2.8)
project(Environmentship)
find_package(OpenCV REQUIRED)
find_package(WiringPi REQUIRED)
find_package(Threads REQUIRED) 
include_directories(${OpenCV_INCLUDE_DIRS} ${WIRINGPI_INCLUDE_DIRS})
add_executable(Environmentship main.cpp network.cpp network.h video.h video.cpp stopwatch.cpp stopwatch.h)
target_link_libraries(Environmentship ${OpenCV_LIBS})
target_link_libraries(Environmentship ${WIRINGPI_LIBRARIES}) 
target_link_libraries(Environmentship ${CMAKE_THREAD_LIBS_INIT}) 